test portfolio page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,153 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Parallax Template - Materialize</title>
+
+  <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <style>
+  .profile {
+    border-radius: 50%;
+	
+	border: 4px solid #455A64;
+}
+
+	.card-title {
+		text-align: center;
+	}
+	
+	h1 {
+	color: #455A64;
+	
+	}
+	h4 {
+	color: #CFD8DC;
+	}
+	body {
+	background-color: #CFD8DC;
+	}
+	.page-footer {
+	background-color: #455A64;
+	}
+	
+	.card {
+		margin:30px;
+	
+	}
+  </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<br>
-<p>Is this working?<p>
-</body>
+  
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center ">Caroline Fuhrer</h1>
+        <div class="row center">
+		  <img class="profile" src="images/profile.jpg" height="250" width="250" alt="pier sunset">
+          <h4 class="header col s12 light">~ Portfolio ~</h4>
+        </div>
+
+        <br><br>
+
+      </div>
+    </div>
+    <div class="parallax"><img src="images/header_pic3.png" alt="pier sunset"></div>
+  </div>
+
+<div class="row"></div>
+  <div class="container">
+    <div class="section">
+
+      <!--   Icon Section   -->
+	<div class="row">
+		<div class="col s8 m4">
+			<div class="card small">
+				<div class="card-image waves-effect waves-block waves-light">
+					<img class="activator" src="images/portfolio.png">
+				</div>
+				<div class="card-content">
+					<!--<span class="card-title activator grey-text text-darken-4">Portfolio<i class="material-icons right">more_vert</i></span> -->
+					<span class="card-title activator grey-text text-darken-4 card-title">
+						<a href="portfiolo.html">Portfolio</a></span>
+						<p> View portfolio and Assignments</p>
+				</div>
+			<!--	<div class="card-reveal">
+					<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+					<p>Course assignments</p>
+				</div> -->
+			</div>
+		</div>
+		<div class="col s8 m4">
+			<div class="card small">
+				<div class="card-image waves-effect waves-block waves-light">
+					<img class="activator" src="images/cv3.png">
+				</div>
+				<div class="card-content">
+					<span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+					<p><a href="resume.html">Resume</a></p>
+				</div>
+				<div class="card-reveal">
+					<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+					<p>Open this card to learn more about the me.</p>
+				</div>
+			</div>
+		</div>
+		<div class="col s8 m4">
+			<div class="card small">
+				<div class="card-image waves-effect waves-block waves-light">
+					<img class="activator" src="images/email.png">
+				</div>
+				<div class="card-content">
+					<span class="card-title activator grey-text text-darken-4">Contact<i class="material-icons right">more_vert</i></span>
+					<p><a href="#">This is a link</a></p>
+				</div>
+				<div class="card-reveal">
+					<span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+					<p>Contact</p>
+				</div>
+			</div>
+		</div>
+  </div>
+  
+  </div>
+	</div>  
+<div class="row"></div>
+
+
+  
+
+ 
+  <footer class="page-footer">
+    <div class="container">
+      <div class="row">
+        
+          <h5 class="white-text">Summary</h5>
+          <p class="grey-text text-lighten-4">
+Dedicated information management and GIS specialist, holding a degree in epidemiology with 5+ years’ experience in public health and health emergencies, and a profound understanding of the UN system and the humanitarian sector. Demonstrated experience in web development and passion for data automation and visualization.
+SKILLS
+Data Collection: LimeSurvey, ODK, Kobo, Esri Survey123; Database Management: MS Access, SQL;
+Data Analysis & Visualization: MS Excel, Operations Dashboard for ArcGIS, PowerBI, Python, R, Visual Basic; GIS and Mapping: Esri ArcGIS Desktop & Online, QGIS; Web Development: CSS, HTML, JavaScript; Languages: English (proficient), French (advanced), German (mother tongue)
+
+       
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      </div>
+    </div>
+  </footer>
+
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+
+  </body>
 </html>
