--- a/portfolio.html
+++ b/portfolio.html
@@ -120,51 +120,31 @@
                <div class="col s8 m5">
                   <div class="card large blue-grey darken-1">
                      <div class="card-content white-text">
-                        <span class="card-title activator grey-text white-text">Assessment 1<i class="material-icons right">more_vert</i></span>
-                        <h6 align="center">Agent-Based Model (Sheep and wolves)</h6>
-                        <p>This model is an example of an agent based model. Using python the model simulates a herd
-                           of sheep grazing on a field. During every iteration of the model, each sheep is acting autonomously from 
-                           by moving, eating grass, and reproducing if they meet a suitable mate.
-                           A second set of agents has been introduce in form of wolves. A like the sheep, wolves are moving 
-                           independently, trying to hunt sheep. <br><br>
-                           To run this script on your computer download the three files on the bottom of this card. As a users you can change 
-                           the input parameters of the scripts to alter the model. See card details for further information.
+                        <span class="card-title activator grey-text white-text">Placeholder<i class="material-icons right">more_vert</i></span>
+                        <h6 align="center">...</h6>
+                        <p>...
                         </p>
                      </div>
                      <div class="card-action" align="center">
-                        <a href="#">Model</a>
-                        <a href="#">Agent Framework</a>
-                        <a href="#">Data</a>
+                        <a href="#"></a>
+                        <a href="#"></a>
+                        <a href="#"></a>
                      </div>
                      <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">
-                           <h6 align="center">Agent-Based Model (Sheep and wolves)</h6>
+                           <h6 align="center">Placeholder)</h6>
                            <i class="material-icons right">close</i>
                         </span>
                         <p>
                            <font color="black">
-                              <b>Sheep:</b> Each sheep is moving across the field randomly, eating grass(the environment). Sheep who eat more
-                              than 100 units become sick and will sicken up. Sick sheep empty their stored environment at the current location. Sheep also
-                              have the ability to share the environment they collected (ate) with another sheep if the sheep is within a user-defined proximity.
-                              Each sheep has been assigned a sex randomly. If a female sheep meets a male sheep (are within 5px radius) it will reproduce. After reproducing the female 
-                              sheep will become unfertile for at least one iteration. After that the female sheep has a 5% chance of becoming fertile again.
-                              <br>To avoid overpopulation, sheep can be eaten by wolves. In addition if the sheep population exceeds 100 individuals a disease
-                              outbreak will occur that has an 80% chance of killing any sheep.
-                              <br><br>
-                              <b>Wolves:</b> Wolves are are trying to hunt the sheep. A like sheep, wolves are moving around independently 
-                              and randomly every iteration of the model. Wolfs who do not manage to catch a sheep after
-                              100 iteration of the model will starve and are removed from the field. Unlike sheep, wolves can not reproduce. 
-                              However, there is a 1% chance of a new wolf appearing.
-                              <br><br>
-                              <b>User input parameters</b><br> If the the script is run through the command line, the user has the ability to define the following
-                              parameters:
-                        <ul>
+                              ...
+                        <!--<ul>
                         <li><b>num_of_sheep</b><i> (int)</i>: Number of sheep at the beginning of the model.</li>
                         <li><b>num_of_wolves</b><i> (int)</i>: Number of sheep at the beginning of the model.</li>
                         <li><b>num_of_iterations</b><i> (int)</i>: Number of iterations after which the model will be updated.</li>
                         <li><b>neighbourhood</b><i> (int)</i>: Size of the neighbourhood in which sheep can share grass.</li>
                         <li><b>max_iterations</b><i> (int)</i>: Maximum number of iterations after which the model will stop.</li>
-                        <ul>
+                        <ul> -->
                         </font></p>
                      </div>
                   </div>
@@ -180,7 +160,7 @@
          </div>
          <div class="footer-copyright" align="right">
             <div class="container">
-               <a class="brown-text text-lighten-3" href="MIT_License.txt">MIT License</a>
+               <a class="brown-text text-lighten-3" href="files/MIT_License.txt">MIT License</a>
             </div>
          </div>
       </footer>
