--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
                            of sheep grazing on a field. During every iteration of the model, each sheep is moving autonomously, eating grass and mating
                            with suitable mates.
                            A second set of agents has been introduce in form of wolves. Alike the sheep, wolves are moving 
-                           independently, trying to hunt sheep. <br>
+                           independently, trying to hunt sheep. <br><br>
                            See card details for further information.
                         </p>
                      </div>
@@ -89,7 +89,7 @@
                         <p align="left">
                            <font color="black">
 							  To run this script on your computer download the three files on the bottom of this card. As a users you can change 
-							  the input parameters of the scripts to alter the model.<br>
+							  the input parameters of the scripts to alter the model.<br><br>
                               <b>Sheep:</b> Each sheep is moving across the field randomly, eating grass(the environment). Sheep who eat more
                               than 100 units become sick and will sicken up. Sick sheep empty their stored environment at the current location. Sheep also
                               have the ability to share the environment they collected (ate) with another sheep if the sheep is within a user-defined proximity.
