change jpg to png

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
    <nav>
    <div class="nav-wrapper">
    <span style="padding:15px">
-   <img class="profile" src="images/profile.jpg" height="150" width="150" alt="profile picture"> </span>
+   <img class="profile" src="images/profile.png" height="150" width="150" alt="profile picture"> </span>
    <a href="#!" class="brand-logo title">Caroline Fuhrer </a>
    </div>
    </nav>
