--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                <br><br>
                <h1 class="header center ">Caroline Fuhrer</h1>
                <div class="row center">
-                  <img class="profile" src="images/profile.jpg" height="250" width="250" alt="pier sunset">
+                  <img class="profile" src="images/profile.png" height="250" width="250" alt="pier sunset">
                   <h4 class="header col s12 light">~ Portfolio ~</h4>
                </div>
                <br><br>
