--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
       <nav>
          <div class="nav-wrapper">
             <span style="padding:15px">
-            <img class="profile" src="images/profile.jpg" height="150" width="150" alt="profile picture"> </span>
+            <img class="profile" src="images/profile.png" height="150" width="150" alt="profile picture"> </span>
             <a href="#!" class="brand-logo title">Caroline Fuhrer </a>
             <ul class="right hide-on-med-and-down">
                <li  class="white-text"><a href="index.html" onclick="returnToHomePage()">Return</a></li>
