--- a/resume.html
+++ b/resume.html
@@ -325,7 +325,7 @@
                      <div>
                         <span class="txt-left"><b>Introduction to QGIS & Basic Excel</b></span>
                         <span class="txt-right">2018</span><br>
-                        <span class="txt-left">Jigjiga, Ethiopoa</span>
+                        <span class="txt-left">Jijiga, Ethiopia</span>
                         <br><br>
                      </div>
                      <div>
@@ -379,7 +379,7 @@
                </div>
             </div>
             <div class="row">
-               <h5>PUPLICATIONS</h5>
+               <h5>PUBLICATIONS</h5>
                <div class="card">
                   <div id="publication" class="card-content experience" style="padding-bottom:10px">
                      <div>
